--- a/package.json
+++ b/package.json
@@ -67,7 +67,8 @@
     "sway": "^2.0.5",
     "traverse": "^0.6.6",
     "urijs": "^1.19.5",
-    "xml2js": "^0.4.23"
+    "xml2js": "^0.4.23",
+    "express": "^4.16.1"
   },
   "devDependencies": {
     "babel-polyfill": "^6.23.0",
