--- a/package.json
+++ b/package.json
@@ -68,7 +68,9 @@
     "traverse": "^0.6.6",
     "urijs": "^1.19.5",
     "xml2js": "^0.4.23",
-    "express": "^4.16.1"
+    "express": "^4.16.1",
+    "body-parser":"^1.20.0",
+    "helmet":"^6.0.0"
   },
   "devDependencies": {
     "babel-polyfill": "^6.23.0",
